--- a/public/app/caixas/views/list-caixas.client.view.html
+++ b/public/app/caixas/views/list-caixas.client.view.html
@@ -13,6 +13,54 @@
         </div>
     </div>
     <div class="wrapper wrapper-content animated fadeInRight">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <h5>FooTable with row toggler, sorting and pagination</h5>
+
+                        <div ibox-tools> </div>
+                    </div>
+                    <div class="ibox-content">
+
+                        <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="8">
+                            <thead>
+                            <tr>
+                                <th data-toggle="true">Data</th>
+                                <th>Venda</th>
+                                <th>Diferença</th>
+                                <th data-hide="all">Dinheiro</th>
+                                <th data-hide="all">Cartão</th>
+                                <th data-hide="all">Despesas</th>
+                                <th>Conferido</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr data-ng-repeat="cx in caixas">
+                                <td>{{ cx.data_caixa | date: 'dd/MM/yyyy' }}</td>
+                                <td>{{ cx.v.entradas.vendas.total | currency: 'R$ ' }}</td>
+                                <td ng-class="(cx.v.diferenca.total < 0) ? 'text-danger': ((cx.v.diferenca.total === 0) ? 'text-success': 'text-warning')">{{ cx.v.diferenca.total | currency: 'R$ ' }}</td>
+                                <td><span class="pie">0.52/1.561</span></td>
+                                <td>{{ cx.v.saidas.cartoes.total | currency: 'R$ '}}</td>
+                                <td>{{ cx.v.saidas.despesas.total | currency: 'R$ ' }}</td>
+                                <td><a href="#"><i class="fa fa-check text-navy"></i></a></td>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <td colspan="5">
+                                    <ul class="pagination pull-right"></ul>
+                                </td>
+                            </tr>
+                            </tfoot>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="ibox float-e-margins">
             <div class="ibox-title">
                 <h5>Caixas por Data <small class="text-danger"> {{ auxTestes }}</small></h5>
